Fix issues with scrollbar

--- a/app/styles/components/_chat-room.scss
+++ b/app/styles/components/_chat-room.scss
@@ -3,10 +3,7 @@
 }
 
 .app-chat-room__conversation {
-  display: flex;
-  flex-direction: column;
   flex: 1;
-  justify-content: flex-end;
 }
 
 .app-chat-room__info {
